--- a/app/src/main/res/layout/activity_order_accept.xml
+++ b/app/src/main/res/layout/activity_order_accept.xml
@@ -18,7 +18,8 @@
         android:layout_height="match_parent"
         android:layout_above="@id/bottomButtons"
         android:layout_below="@id/toolbar"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        tools:ignore="MissingClass">
 
         <LinearLayout
             android:layout_width="match_parent"
