--- a/app/src/main/res/layout/recycler_my_orders_item.xml
+++ b/app/src/main/res/layout/recycler_my_orders_item.xml
@@ -80,6 +80,10 @@
                 android:padding="3dp"
                 android:textSize="@dimen/normal_text_size" />
             <TextView
+                android:id="@+id/tdStoreName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
                 android:textColor="@color/cancelled"
                 android:fontFamily="@font/roboto_bold"
                 android:padding="3dp"
