--- a/app/src/main/res/layout/activity_dispatched.xml
+++ b/app/src/main/res/layout/activity_dispatched.xml
@@ -761,7 +761,7 @@
 
                         <TextView
                             android:id="@+id/txtDiscount"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:gravity="end"
